--- a/Func Req.tex
+++ b/Func Req.tex
@@ -738,6 +738,28 @@ A lecturer should get statistical information about each student and generate an
 \end{center}
 \setcounter{section}{0}
 %---------------------------------------------------------------START EDITING HERE FOR PROFILE HANDLING----------------------------------------------------------------------
+
+%EPHI
+\section{Create Profile}
+\subsection*{Description:}
+\textbf{Description:}Profile creation allows the user to register and login to the system to view and interact with the BuzzSpace.
+\subsection{Prioritization:} 
+\textbf{}Critical
+\subsection{Conditions and Data Structures:}
+\subsubsection*{Pre-Conditions:}
+\begin{itemize}
+\item User is logged into the system as a guest(There can only be on profile per user). 
+\end{itemize}
+\subsubsection*{Post-Conditions:}
+\begin{itemize}
+\item Validates a user logged into the system and has a new profile.
+\end{itemize}
+\subsubsection*{Requests and Results Data Structures:}
+\subsection{Required Functionality:} 
+\includegraphics[width=1\linewidth]{./Images/UserProfile/CreateUserProfileUseCase}
+\subsection{Process Specifications:} 
+\includegraphics[width=1\linewidth]{./Images/UserProfile/CreateUserProfileAcvitiy}
+
 %EPHI
 \section{Modify Profile}
 \subsection*{Description:}
@@ -761,27 +783,27 @@ A lecturer should get statistical information about each student and generate an
 \subsection{Process Specifications:} 
 \includegraphics[width=1\linewidth]{./Images/UserProfile/ModifyUserProfileAcvitiy}
 
+
 %EPHI
-\section{Create Profile}
+\section{View Profile}
 \subsection*{Description:}
-\textbf{Description:}Profile creation allows the user to register and login to the system to view and interact with the BuzzSpace.
+\textbf{Description:}Profile view allows the user to view ones or other users profiles on the BuzzSpace.
 \subsection{Prioritization:} 
-\textbf{}Critical
+\textbf{}Nice To Have
 \subsection{Conditions and Data Structures:}
 \subsubsection*{Pre-Conditions:}
 \begin{itemize}
-\item User is logged into the system as a guest(There can only be on profile per user). 
+\item User is logged into the system as a user not a guest. 
 \end{itemize}
 \subsubsection*{Post-Conditions:}
 \begin{itemize}
-\item Validates a user logged into the system and has a new profile.
+\item The user is logged into the system and has a profile displayed.
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
-\includegraphics[width=1\linewidth]{./Images/UserProfile/CreateUserProfileUseCase}
+\includegraphics[width=1\linewidth]{./Images/UserProfile/ViewUserProfileUseCase}
 \subsection{Process Specifications:} 
-\includegraphics[width=1\linewidth]{./Images/UserProfile/CreateUserProfileAcvitiy}
-
+\includegraphics[width=1\linewidth]{./Images/UserProfile/ViewUserProfileAcvitiy}
 %EPHI
 \section{Create Private Message}
 \subsection*{Description:}
