Overviews for thread handling and authorization

--- a/Func Req.tex
+++ b/Func Req.tex
@@ -146,6 +146,8 @@ BuzzSpace will be able to delete a BuzzSpace, except if he changed the property 
 
 %-------------------------------------------------------START EDITING HERE FOR THREAD HANDLING------------------------------------------------------------
 %JESSICA
+\textbf{Overview}\\
+\includegraphics[width=1\linewidth]{./Images/OverviewDiagrams/ThreadHandlingOverview.jpg}\\
 \section{Create Thread}
 \subsection*{Description:}
 1.	User activates â€œCreate Threadâ€ function by selecting the â€œCreate Threadâ€ option.\\
@@ -634,6 +636,9 @@ as posts created by other users.
 \end{center}
 \setcounter{section}{0}
 %---------------------------------------------------------------START EDITING HERE FOR AUTHORISATION----------------------------------------------------------------------
+
+\textbf{Overview}\\
+\includegraphics[width=1\linewidth]{./Images/OverviewDiagrams/AuthorizationOverview.jpg}\\
 %MICHELLE
 \section{Login}
 \subsection*{Description:}This use case defines the ability for a user to log into her/his account to activate certain functionalities of the system.
