--- a/Func Req.tex
+++ b/Func Req.tex
@@ -59,6 +59,8 @@ Maria Qumalo&29461775\\
 
 %-------------------------------------------------------START EDITING HERE FOR BUZZSPACE HANDLING------------------------------------------------------------
 %MICHELLE
+\textbf{Overview of the Domain}\\\\
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/Overview.jpg}\\
 \section{Create BuzzSpace}
 \subsection*{Description:}This use case encapsulates the ability for a user to create a new BuzzSpace that will be associated with a specific acitve module. 
 Each BuzzSpace will have a root thread to start with. The creator of the BuzzSpace will set properties of the BuzzSpace (i.e which status is needed for a user 
@@ -78,7 +80,9 @@ to do what).
 	\item If this service has been rejected, an exception is thrown and an error message will be displayed to the user.
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
-\subsection{Required Functionality:} 
+\subsection{Required Functionality:}
+\textbf{Use case diagram of the Create BuzzSpace use case}\\ 
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceCreation.jpg}\\
 \subsection{Process Specifications:} 
 
 %MICHELLE
@@ -93,7 +97,9 @@ properties of the specific BuzzSpace (i.e. the permissions that were set, date o
 	\item Threads can now be viewed and accessed, and the properties can also be viewed.
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
-\subsection{Required Functionality:} 
+\subsection{Required Functionality:}
+\textbf{Use case diagram of the Read BuzzSpace use case}\\ 
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceRead.jpg}\\
 \subsection{Process Specifications:} 
 
 %MICHELLE
@@ -113,6 +119,8 @@ properties of the specific BuzzSpace (i.e. the permissions that were set, date o
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\textbf{Use case diagram of the Update BuzzSpace use case}\\
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceUpdate.jpg}\\
 \subsection{Process Specifications:} 
 
 %MICHELLE
@@ -132,6 +140,8 @@ BuzzSpace will be able to delete a BuzzSpace, except if he changed the property 
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\textbf{Use case diagram of the Delete BuzzSpace use case}\\
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceDeletion.jpg}\\
 \subsection{Process Specifications:} 
 
 %LEAVE
