Private Message Create

--- a/Func Req.tex
+++ b/Func Req.tex
@@ -869,16 +869,27 @@ A lecturer should get a detailed audit report.\\
 \includegraphics[width=1\linewidth]{./Images/UserProfile/ViewUserProfileUseCase}
 \subsection{Process Specifications:} 
 \includegraphics[width=1\linewidth]{./Images/UserProfile/ViewUserProfileActivity}
+
 %EPHI
 \section{Create Private Message}
 \subsection*{Description:}
+\textbf{Description}Create message allows the user that is logged into the system to create a messages such as email message, sms message and profile private message, and select the recipients then write of message contents and can include attachments to the message. 
 \subsection{Prioritization:} 
+\textbf{}Nice To Have
 \subsection{Conditions and Data Structures:}
 \subsubsection*{Pre-Conditions:}
+\begin{itemize}
+\item User is logged into the system as a user not a guest. 
+\end{itemize}
 \subsubsection*{Post-Conditions:}
+\begin{itemize}
+\item The user is logged into the system and has sent a message.
+\end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\includegraphics[width=1\linewidth]{./Images/PrivateMessage/createMessageFunctionality}
 \subsection{Process Specifications:} 
+\includegraphics[width=1\linewidth]{./Images/PrivateMessage/createMessgeActivity}
 
 %EPHI
 \section{Read Private Message}
