--- a/Func Req.tex
+++ b/Func Req.tex
@@ -886,7 +886,9 @@ A lecturer should get a detailed audit report.\\
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\includegraphics[width=1\linewidth]{./Images/PrivateMessage/readMessageUseCase}
 \subsection{Process Specifications:} 
+\includegraphics[width=1\linewidth]{./Images/PrivateMessage/createMessageActivity}
 
 %EPHI
 \section{Update Private Message}
