Updated Post Handling Content

--- a/Func Req.tex
+++ b/Func Req.tex
@@ -59,6 +59,8 @@ Maria Qumalo&29461775\\
 
 %-------------------------------------------------------START EDITING HERE FOR BUZZSPACE HANDLING------------------------------------------------------------
 %MICHELLE
+\textbf{Overview of the Domain}\\\\
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/Overview.jpg}\\
 \section{Create BuzzSpace}
 \subsection*{Description:}This use case encapsulates the ability for a user to create a new BuzzSpace that will be associated with a specific acitve module. 
 Each BuzzSpace will have a root thread to start with. The creator of the BuzzSpace will set properties of the BuzzSpace (i.e which status is needed for a user 
@@ -79,6 +81,8 @@ to do what).
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\textbf{Use case diagram of the Create BuzzSpace use case}\\ 
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceCreation.jpg}\\
 \subsection{Process Specifications:} 
 
 %MICHELLE
@@ -94,6 +98,8 @@ properties of the specific BuzzSpace (i.e. the permissions that were set, date o
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\textbf{Use case diagram of the Read BuzzSpace use case}\\ 
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceRead.jpg}\\
 \subsection{Process Specifications:} 
 
 %MICHELLE
@@ -113,6 +119,8 @@ properties of the specific BuzzSpace (i.e. the permissions that were set, date o
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\textbf{Use case diagram of the Update BuzzSpace use case}\\
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceUpdate.jpg}\\
 \subsection{Process Specifications:} 
 
 %MICHELLE
@@ -132,6 +140,8 @@ BuzzSpace will be able to delete a BuzzSpace, except if he changed the property 
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\textbf{Use case diagram of the Delete BuzzSpace use case}\\
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceDeletion.jpg}\\
 \subsection{Process Specifications:} 
 
 %LEAVE
@@ -419,6 +429,8 @@ Moving a thread.\\
 \setcounter{section}{0}
 %---------------------------------------------------------------START EDITING HERE FOR POST HANDLING----------------------------------------------------------------------
 %MICHELLE
+\textbf{Overview of the Domain}\\\\
+\includegraphics[width=1\linewidth]{./Images/PostHandling/Overview.jpg}\\
 \section{Create Post}
 \subsection*{Description:}This use case refers to the ability to create a new post on a certain thread. 
 \subsection{Prioritization:} Critical
@@ -439,6 +451,8 @@ Moving a thread.\\
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\textbf{Use case diagram of the Create Post use case}\\
+\includegraphics[width=1\linewidth]{./Images/PostHandling/postCreation.jpg}\\
 \subsection{Process Specifications:} 
 
 %MICHELLE
@@ -454,6 +468,8 @@ Moving a thread.\\
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\textbf{Use case diagram of the Read Post use case}\\
+\includegraphics[width=1\linewidth]{./Images/PostHandling/postRead.jpg}\\
 \subsection{Process Specifications:} 
 
 %MICHELLE
@@ -472,6 +488,8 @@ Moving a thread.\\
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\textbf{Use case diagram of the Update Post use case}\\
+\includegraphics[width=1\linewidth]{./Images/PostHandling/postUpdate.jpg}\\
 \subsection{Process Specifications:} 
 
 %MICHELLE
@@ -493,6 +511,8 @@ This option will only be available if the user is logged in.
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\textbf{Use case diagram of the Delete Post use case}\\
+\includegraphics[width=1\linewidth]{./Images/PostHandling/postDeletion.jpg}\\
 \subsection{Process Specifications:} 
 
 %PRENOLAN
@@ -888,7 +908,7 @@ A lecturer should get a detailed audit report.\\
 \subsection{Required Functionality:} 
 \includegraphics[width=1\linewidth]{./Images/PrivateMessage/readMessageUseCase}
 \subsection{Process Specifications:} 
-\includegraphics[width=1\linewidth]{./Images/PrivateMessage/createMessageActivity}
+%\includegraphics[width=1\linewidth]{./Images/PrivateMessage/createMessageActivity}
 
 %EPHI
 \section{Delete Private Message}
