Create Profile Complete

--- a/Func Req.tex
+++ b/Func Req.tex
@@ -804,6 +804,8 @@ A lecturer should get a detailed audit report.\\
 
 %EPHI
 \section{Create Profile}
+\textbf{Overview}\\
+\includegraphics[width=1\linewidth]{./Images/OverviewDiagrams/ProfileHandling.jpg}\\
 \subsection*{Description:}
 \textbf{Description:}Profile creation allows the user to register and login to the system to view and interact with the BuzzSpace.
 \subsection{Prioritization:} 
@@ -818,6 +820,7 @@ A lecturer should get a detailed audit report.\\
 \item Validates a user logged into the system and has a new profile.
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
+\includegraphics[width=1\linewidth]{./Images/UserProfile/CreateUserProfileStructure}
 \subsection{Required Functionality:} 
 \includegraphics[width=1\linewidth]{./Images/UserProfile/CreateUserProfileUseCase}
 \subsection{Process Specifications:} 
