--- a/Func Req.tex
+++ b/Func Req.tex
@@ -844,6 +844,7 @@ A lecturer should get a detailed audit report.\\
 \item User keeps already existing profile: User had logged into the system and the profile had not been modified. 
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
+\includegraphics[width=1\linewidth]{./Images/UserProfile/ModifyUserProfileStructure}
 \subsection{Required Functionality:}
 \includegraphics[width=1\linewidth]{./Images/UserProfile/ModifyUserProfileUseCase}
 \subsection{Process Specifications:} 
