View User Profile Complete

--- a/Func Req.tex
+++ b/Func Req.tex
@@ -867,6 +867,7 @@ A lecturer should get a detailed audit report.\\
 \item The user is logged into the system and has a profile displayed.
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
+\includegraphics[width=1\linewidth]{./Images/UserProfile/ViewUserProfileStructure}
 \subsection{Required Functionality:} 
 \includegraphics[width=1\linewidth]{./Images/UserProfile/ViewUserProfileUseCase}
 \subsection{Process Specifications:} 
