Profile Handling Complete

--- a/Func Req.tex
+++ b/Func Req.tex
@@ -874,6 +874,9 @@ A lecturer should get a detailed audit report.\\
 \includegraphics[width=1\linewidth]{./Images/UserProfile/ViewUserProfileActivity}
 
 %EPHI
+\section{Private Message}
+\textbf{Overview}\\
+\includegraphics[width=1\linewidth]{./Images/OverviewDiagrams/PrivateMessage.jpg}\\
 \section{Create Private Message}
 \subsection*{Description:}
 \textbf{Description}Create message allows the user that is logged into the system to create a messages such as email message, sms message and profile private message, and select the recipients then write of message contents and can include attachments to the message. 
@@ -889,6 +892,7 @@ A lecturer should get a detailed audit report.\\
 \item The user is logged into the system and has sent a message.
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
+\includegraphics[width=1\linewidth]{./Images/PrivateMessage/createMessageStructure}
 \subsection{Required Functionality:} 
 \includegraphics[width=1\linewidth]{./Images/PrivateMessage/createMessageFunctionality}
 \subsection{Process Specifications:} 
