Changed Login, Registration and Overview

--- a/Func Req.tex
+++ b/Func Req.tex
@@ -37,16 +37,10 @@ Maria Qumalo&29461775\\
 \tableofcontents
 \newpage
 \setlength{\voffset}{-3cm}
-\hspace{-1cm}The following modules will be discussed, each with their own set of use cases:
-\begin{itemize}
-	\item BuzzSpace Handling
-	\item Thread Handling
-	\item Posts Handling
-	\item Filtering 
-	\item Authorisation
-	\item Reporting
-	\item Profile Handling
-\end{itemize}
+\begin{center}
+\textbf{\large{Diagram to show an abstract overview of the Buzz System. This system will be discussed in greater detail in the rest of the article.}}\\
+\includegraphics[width=1\linewidth]{./Images/TotalOverview/Overview.jpg}\\
+\end{center}
 \newpage
 \setlength{\voffset}{-3cm}
 
@@ -663,6 +657,8 @@ as posts created by other users.
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\textbf{Use case diagram of the Login use case}\\
+\includegraphics[width=1\linewidth]{./Images/Author/Login.jpg}\\
 \subsection{Process Specifications:} 
 
 %JESSICA
@@ -710,6 +706,8 @@ Sequence Diagram\\
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
 \subsection{Required Functionality:} 
+\textbf{Use case diagram of the Registration use case}\\
+\includegraphics[width=1\linewidth]{./Images/Author/Registration.jpg}\\
 \subsection{Process Specifications:} 
 
 %LEAVE
