--- a/Func Req.tex
+++ b/Func Req.tex
@@ -912,6 +912,7 @@ A lecturer should get a detailed audit report.\\
 \item The user is logged into the system and has received one or more messages.
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
+\includegraphics[width=1\linewidth]{./Images/PrivateMessage/readMessageStructure}
 \subsection{Required Functionality:} 
 \includegraphics[width=1\linewidth]{./Images/PrivateMessage/readMessageUseCase}
 \subsection{Process Specifications:} 
@@ -935,6 +936,8 @@ A lecturer should get a detailed audit report.\\
 \item The messages deleted are no longer available in the system.
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
+\includegraphics[width=1\linewidth]{./Images/PrivateMessage/deleteMessageStructure}
+\subsection{Required Functionality:} 
 \includegraphics[width=1\linewidth]{./Images/PrivateMessage/deleteMessageUseCase}
 \subsection{Process Specifications:} 
 \includegraphics[width=1\linewidth]{./Images/PrivateMessage/deleteMessageActivity}
