Resized images under the filter module

--- a/Func Req.tex
+++ b/Func Req.tex
@@ -618,15 +618,15 @@ as posts created by other users.
 \subsubsection*{Post-Conditions:}
 1.Upon clicking the submit button, the search and/or filter results will be automatically displayed for the user to see.\\
 \subsubsection*{Requests and Results Data Structures:}
-\includegraphics{Images/SearchAndFilter/Filter_input_output}\\
-\includegraphics{Images/SearchAndFilter/Search_Input_output}\\
-\includegraphics{Images/SearchAndFilter/SearchAndFilter_input_output}\\
+\includegraphics[width=1\linewidth]{Images/SearchAndFilter/Filter_input_output}\\
+\includegraphics[width=1\linewidth]{Images/SearchAndFilter/Search_Input_output}\\
+\includegraphics[width=1\linewidth]{Images/SearchAndFilter/SearchAndFilter_input_output}\\
 \subsection{Required Functionality:} 
-\includegraphics{Images/SearchAndFilter/SearchAndFilter_usecase}\\
+\includegraphics[width=1\linewidth]{Images/SearchAndFilter/SearchAndFilter_usecase}\\
 \subsection{Process Specifications:} 
-\includegraphics{Images/SearchAndFilter/Search_processSpecification}\\
-\includegraphics{Images/SearchAndFilter/Filter_processSpecification}\\
-\includegraphics{Images/SearchAndFilter/SearchAndFilter_processSpecification}\\
+\includegraphics[width=1\linewidth]{Images/SearchAndFilter/Search_processSpecification}\\
+\includegraphics[width=1\linewidth]{Images/SearchAndFilter/Filter_processSpecification}\\
+\includegraphics[width=1\linewidth]{Images/SearchAndFilter/SearchAndFilter_processSpecification}\\
 
 %LEAVE
 \newpage
