--- a/FuncReq.tex
+++ b/FuncReq.tex
@@ -342,7 +342,7 @@ This feature is Nice-To-Have. The system will not be immensely devalued if this 
 \includegraphics[width=0.7\linewidth]{Images/SCHMThread/SummarizeInOut.jpg}\\
 \subsection{Required Functionality:} 
 Summarizing a thread\\
-\includegraphics[width=1.3\linewidth]{./Images/SCHMThread/ThreadSummarize.jpg}\\
+\includegraphics[width=1\linewidth]{./Images/SCHMThread/ThreadSummarize.jpg}\\
 %\subsection{Process Specifications:} 
 %\includegraphics[width=1.2\linewidth]{./Images/BestAnswer/SummarizeAct.jpg}\\
 
@@ -365,7 +365,7 @@ It is considered critical to the system. It remains key that the system maintain
 \includegraphics[width=0.7\linewidth]{Images/SCHMThread/HideInOut.jpg}\\
 \subsection{Required Functionality:} 
 Hiding a thread.\\
-\includegraphics[width=1.3\linewidth]{./Images/SCHMThread/ThreadHide.jpg}\\
+\includegraphics[width=1\linewidth]{./Images/SCHMThread/ThreadHide.jpg}\\
 %\subsection{Process Specifications:} 
 %\includegraphics[width=1.2\linewidth]{./Images/BestAnswer/HideAct.jpg}\\
 
@@ -384,10 +384,10 @@ This feature is considered important. The system can cope without it but it is n
 2.	The thread is closed successfully if the pre-conditions have been met or open otherwise.\\
 3.	User is notified that thread is closed.\\
 \subsubsection*{Requests and Results Data Structures:}
-\includegraphics[width=0.7\linewidth]{Images/SCHMThread/CloseInOut.jpg}\\
+\includegraphics[width=1\linewidth]{Images/SCHMThread/CloseInOut.jpg}\\
 \subsection{Required Functionality:} 
 Closing a thread.\\
-\includegraphics[width=1.2\linewidth]{./Images/SCHMThread/ThreadClose.jpg}\\
+\includegraphics[width=0.7\linewidth]{./Images/SCHMThread/ThreadClose.jpg}\\
 %\subsection{Process Specifications:}
 %\includegraphics[width=1.2\linewidth]{./Images/BestAnswer/CloseAct.jpg}\\
 
@@ -405,10 +405,10 @@ Moving a thread can entail either deleting it from its original Buzz space to a 
 2.	The thread is successfully moved if both pre-conditions are met.\\
 3.	The thread owner is notified if the thread is successfully moved.\\
 \subsubsection*{Requests and Results Data Structures:}
-\includegraphics[width=15,height=10cm]{Images/SCHMThread/MoveInOut.jpg}\\
+\includegraphics{Images/SCHMThread/MoveInOut.jpg}\\
 \subsection{Required Functionality:} 
 Moving a thread.\\
-\includegraphics[width=15cm,height=10cm]{./Images/SCHMThread/ThreadMove.jpg}\\
+\includegraphics[width=0.7\linewidth]{./Images/SCHMThread/ThreadMove.jpg}\\
 %\subsection{Process Specifications:} 
 %\includegraphics[width=1.2\linewidth]{./Images/BestAnswer/MoveAct.jpg}\\
 
@@ -622,11 +622,11 @@ as posts created by other users.
 \includegraphics[width=1\linewidth]{Images/SearchAndFilter/Search_Input_output}\\
 \includegraphics[width=1\linewidth]{Images/SearchAndFilter/SearchAndFilter_input_output}\\
 \subsection{Required Functionality:} 
-\includegraphics[width=1\linewidth]{Images/SearchAndFilter/SearchAndFilter_usecase}\\
+\includegraphics[width=0.4\linewidth]{Images/SearchAndFilter/SearchAndFilter_usecase}\\
 \subsection{Process Specifications:} 
-\includegraphics[width=15cm,height=10cm]{Images/SearchAndFilter/Search_processSpecification}\\
-\includegraphics[width=15cm,height=10cm]{Images/SearchAndFilter/Filter_processSpecification}\\
-\includegraphics[width=15cm,height=10cm]{Images/SearchAndFilter/SearchAndFilter_processSpecification}\\
+\includegraphics[width=0.4\linewidth]{Images/SearchAndFilter/Search_processSpecification}\\
+\includegraphics[width=0.4\linewidth]{Images/SearchAndFilter/Filter_processSpecification}\\
+\includegraphics[width=0.4\linewidth]{Images/SearchAndFilter/SearchAndFilter_processSpecification}\\
 
 %LEAVE
 \newpage
