Uploaded Activity Diagrams

--- a/FuncReq.tex
+++ b/FuncReq.tex
@@ -78,6 +78,8 @@ to do what).
 \textbf{Use case diagram of the Create BuzzSpace use case}\\ 
 \includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceCreation.jpg}\\
 \subsection{Process Specifications:} 
+\textbf{Activity diagram of Create BuzzSpace}\\ 
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceCreationAct.jpg}\\
 
 %MICHELLE
 \section{Read BuzzSpace}
@@ -95,6 +97,8 @@ properties of the specific BuzzSpace (i.e. the permissions that were set, date o
 \textbf{Use case diagram of the Read BuzzSpace use case}\\ 
 \includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceRead.jpg}\\
 \subsection{Process Specifications:} 
+\textbf{Activity diagram of Read BuzzSpace}\\ 
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceReadAct.jpg}\\
 
 %MICHELLE
 \section{Update BuzzSpace}
@@ -108,7 +112,7 @@ properties of the specific BuzzSpace (i.e. the permissions that were set, date o
 \end{itemize}
 \subsubsection*{Post-Conditions:}
 \begin{itemize}
-	\item A message is displayed to let the user knnow that the update has been done successfully
+	\item A message is displayed to let the user know that the update has been done successfully
 	\item If the service was rejected, an exception is thrown and an error message is displayed to let the user know.
 \end{itemize}
 \subsubsection*{Requests and Results Data Structures:}
@@ -116,6 +120,8 @@ properties of the specific BuzzSpace (i.e. the permissions that were set, date o
 \textbf{Use case diagram of the Update BuzzSpace use case}\\
 \includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceUpdate.jpg}\\
 \subsection{Process Specifications:} 
+\textbf{Activity diagram of the Update BuzzSpace}\\ 
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceUpdateAct.jpg}\\
 
 %MICHELLE
 \section{Delete BuzzSpace}
@@ -137,6 +143,8 @@ BuzzSpace will be able to delete a BuzzSpace, except if he changed the property 
 \textbf{Use case diagram of the Delete BuzzSpace use case}\\
 \includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceDeletion.jpg}\\
 \subsection{Process Specifications:} 
+\textbf{Activity diagram of Delete BuzzSpace}\\ 
+\includegraphics[width=1\linewidth]{./Images/BuzzSpaceHandling/buzzSpaceDeleteAct.jpg}\\
 
 %LEAVE
 \newpage
@@ -288,7 +296,7 @@ Sequence Diagram\\
 1	User activates â€œDelete Threadâ€ function by selecting the â€œDelete Threadâ€ option.\\
 2	System checks to see whether user is logged in\\
 3	System reviews the submitted information and  verifies users status and privileges\\
-4	System displays either an acknowledgement and removes the thread or displays an error message based on the pervious checkpoint.\\
+4	System displays either an acknowledgment and removes the thread or displays an error message based on the pervious checkpoint.\\
 \subsection{Prioritization:} 
 This Use case is considered Important\\
 \subsection{Conditions and Data Structures:}
@@ -448,6 +456,8 @@ Moving a thread.\\
 \textbf{Use case diagram of the Create Post use case}\\
 \includegraphics[width=1\linewidth]{./Images/PostHandling/postCreation.jpg}\\
 \subsection{Process Specifications:} 
+\textbf{Activity diagram of Create a Post}\\ 
+\includegraphics[width=1\linewidth]{./Images/PostHandling/postCreationAct.jpg}\\
 
 %MICHELLE
 \section{Read Post}
@@ -465,6 +475,8 @@ Moving a thread.\\
 \textbf{Use case diagram of the Read Post use case}\\
 \includegraphics[width=1\linewidth]{./Images/PostHandling/postRead.jpg}\\
 \subsection{Process Specifications:} 
+\textbf{Activity diagram of Read a Post}\\ 
+\includegraphics[width=1\linewidth]{./Images/PostHandling/postReadAct.jpg}\\
 
 %MICHELLE
 \section{Update Post}
@@ -485,6 +497,8 @@ Moving a thread.\\
 \textbf{Use case diagram of the Update Post use case}\\
 \includegraphics[width=1\linewidth]{./Images/PostHandling/postUpdate.jpg}\\
 \subsection{Process Specifications:} 
+\textbf{Activity diagram of Update a Post}\\ 
+\includegraphics[width=1\linewidth]{./Images/PostHandling/postUpdateAct.jpg}\\
 
 %MICHELLE
 \section{Delete Post}
@@ -508,6 +522,8 @@ This option will only be available if the user is logged in.
 \textbf{Use case diagram of the Delete Post use case}\\
 \includegraphics[width=1\linewidth]{./Images/PostHandling/postDeletion.jpg}\\
 \subsection{Process Specifications:} 
+\textbf{Activity diagram of Delete a Post}\\ 
+\includegraphics[width=1\linewidth]{./Images/PostHandling/postDeletionAct.jpg}\\
 
 %PRENOLAN
 \section{Mark solution post}
@@ -660,6 +676,8 @@ as posts created by other users.
 \textbf{Use case diagram of the Login use case}\\
 \includegraphics[width=1\linewidth]{./Images/Author/Login.jpg}\\
 \subsection{Process Specifications:} 
+\textbf{Activity diagram of Login}\\ 
+\includegraphics[width=1\linewidth]{./Images/Author/LoginAct.jpg}\\
 
 %JESSICA
 \section{Logout}
@@ -709,6 +727,8 @@ Sequence Diagram\\
 \textbf{Use case diagram of the Registration use case}\\
 \includegraphics[width=1\linewidth]{./Images/Author/Registration.jpg}\\
 \subsection{Process Specifications:} 
+\textbf{Activity diagram of Registration}\\ 
+\includegraphics[width=1\linewidth]{./Images/Author/RegistrationAct.jpg}\\
 
 %LEAVE
 \newpage
